# odin-sdl3

./: .gitignore  CMakeLists.txt  add_wasm_block.sh  build.bat  build.sh  build_static.sh  build_wasm.sh  libSDL3.0.dylib  libSDL3.dylib  sdl3__foreign.odin  sdl3_assert.odin  sdl3_asyncio.odin  sdl3_atomic.odin  sdl3_audio.odin  sdl3_bits.odin  sdl3_blendmode.odin  sdl3_camera.odin  sdl3_clipboard.odin  sdl3_cpuinfo.odin  sdl3_dialog.odin  sdl3_endian.odin  sdl3_error.odin  sdl3_events.odin  sdl3_filesystem.odin  sdl3_gamepad.odin  sdl3_gpu.odin  sdl3_guid.odin  sdl3_haptic.odin  sdl3_hidapi.odin  sdl3_hints.odin  sdl3_init.odin  sdl3_iostream.odin  sdl3_joystick.odin  sdl3_keyboard.odin  sdl3_keycode.odin  sdl3_loadso.odin  sdl3_locale.odin  sdl3_log.odin  sdl3_main.odin  sdl3_messagebox.odin  (+31 more)
SDL-build/: .gitignore  README.md  build.sh  clone.sh  copy.sh
image/: SDL3_image.lib  libSDL3_image.0.dylib  libSDL3_image.dylib  libaom_version.dylib  libavif.16.0.4.dylib  libavif.16.dylib  libdav1d.6.9.0.dylib  libwebp.7.1.8.dylib  libwebpdemux.2.0.14.dylib  libwebpdemux.dylib  sdl_image.odin
mixer/: SDL3_mixer.lib  SDL_mixer.odin  bindgen.sjson  libSDL3_mixer.dylib
ttf/: libSDL3_ttf.0.3.0.dylib  libSDL3_ttf.dylib  sdl3_textengine.odin  sdl3_ttf.odin
