cmake_minimum_required(VERSION 3.16)

project(sdl-build)

set(SDL_RENDER OFF)
set(SDL_GPU OFF)
set(SDL_CAMERA OFF)
set(SDL_DIALOG ON)
set(SDL_JOYSTICK ON)
set(SDL_VIRTUAL_JOYSTICK ON)
# IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
# 	set(SDL_VIDEO ON CACHE BOOL "" FORCE)
# ENDIF()
add_subdirectory(SDL)

# tell SDL_ttf to build its own dependencies
set(SDLTTF_VENDORED ON)
add_subdirectory(SDL_ttf)

set(SDLMIXER_VENDORED ON)
# disable formats we don't use to make the build faster and smaller. Also some of these don't work on all platforms so you'll need to do some experimentation.
set(SDLMIXER_MIDI_NATIVE OFF)
set(SDLMIXER_GME OFF)
set(SDLMIXER_WAVPACK ON)
set(SDLMIXER_MOD OFF)
set(SDLMIXER_MOD_XMP OFF)
set(SDLMIXER_OPUS ON)
set(SDLMIXER_MP3_MPG123 OFF)
set(SDLMIXER_VORBIS_VORBISFILE OFF)
set(SDLMIXER_FLAC_LIBFLAC ON)
add_subdirectory(SDL_mixer)

set(SDLIMAGE_VENDORED ON)
# disable formats we don't use to make the build faster and smaller.
set(SDLIMAGE_BMP ON)
set(SDLIMAGE_GIF ON)
set(SDLIMAGE_JPG ON)
set(SDLIMAGE_JXL OFF)
set(SDLIMAGE_LBM OFF)
set(SDLIMAGE_PCX OFF)
set(SDLIMAGE_PNG ON)
set(SDLIMAGE_PNM OFF)
set(SDLIMAGE_QOI ON)
set(SDLIMAGE_SVG ON)
set(SDLIMAGE_TGA ON)
set(SDLIMAGE_TIF ON)
set(SDLIMAGE_WEBP ON)
set(SDLIMAGE_XCF OFF)
set(SDLIMAGE_XPM OFF)
set(SDLIMAGE_XV OFF)
add_subdirectory(SDL_image)

# # SDL_Image bug: https://github.com/libsdl-org/SDL_image/issues/506
# if (APPLE)
#     find_library(IO_LIB ImageIO REQUIRED)
#     find_library(CS_LIB CoreServices REQUIRED)
#     find_library(CT_LIB CoreText REQUIRED)
#     find_library(CG_LIB CoreGraphics REQUIRED)
#     find_library(CF_LIB CoreFoundation REQUIRED)
# endif()
